<resources>
    <string name="app_name">Movie Catalogue</string>
    <string name="tab_title_1">Movies</string>
    <string name="tab_title_2">TV Shows</string>
    <string name="data_title">Title</string>
    <string name="data_date">Date</string>
    <string name="data_genre">Genre</string>
    <string name="title_director">Studio Production</string>
    <string name="data_director">Director</string>
    <string name="title_overview">Overview</string>
    <string name="data_overview">Overview</string>
    <string name="empty_data">No Data Found</string>
    <string name="film_poster">Film Poster</string>
    <string name="text_creator">Creator</string>
    <string name="release_date_rv">Release Date: %s</string>
    <string name="home_title">Home</string>
    <string name="favorite_title">Favorite</string>
    <string name="home_section">MyMovieCatalogue</string>
    <string name="favorite_section">Favorite Section</string>
    <string name="title_activity_favorite">FavoriteActivity</string>

    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>